--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">晔 歌</h1>
+							<p>不积跬步，无以至千里</p>
+							<p>不积小流，无以成江海</p>
 						</div>
 
 					<!-- Nav -->
