--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">简介</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">文件夹</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">关于me</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">联系</span></a></li>
 							</ul>
 						</nav>
 
